# rm_auto_aim

./: .devcontainer.json  .gitignore  Dockerfile  README.md  TechnicalReport.md  WatchDog  check_serial  shell_log.sh
armor_detector/: CMakeLists.txt  README.md
armor_detector/include/armor_detector/: detector_node.h  parser.h
armor_detector/launch/: armor_detector.launch.py
armor_detector/src/: detector_node.cpp  inference.cpp  pnp_solver.cpp
armor_detector_filter/: CMakeLists.txt  package.xml
armor_detector_filter/include/armor_detector_filter/: armor_detector_filter.h
armor_detector_filter/src/: armor_detector_filter.cpp
armor_tracker/: package.xml
armor_tracker/include/armor_tracker/: extended_kalman_filter.h  tracker.h  tracker_node.h
armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
auto_aim/: package.xml
auto_aim/config/: CS-004.yaml  CS-016-6mm-M.yaml  CS-016-6mm-S.yaml  CS-016-8mm.yaml  CS-016-old.yaml  camera_offset.yaml  hero.yaml  infantry_CS004.yaml  infantry_CS016.yaml  robot_type  sentry.yaml
auto_aim/launch/: armor_auto_aim.launch.py  buff_detector_armor.launch.py  cam_detector.launch.py  common.py  only_armor_detector.launch.py  only_armor_detector_sentry.launch.py  only_detector.launch.py  rm_auto_aim.launch.py  rm_auto_aim_sentry.launch.py  robot_descript.launch.py  robot_descript_with_seria.launch.py
auto_aim_interfaces/: CMakeLists.txt
auto_aim_interfaces/msg/: Target.msg
buff_detector/: CMakeLists.txt
buff_detector/include/buff_detector/: buff_detector.h  buff_detector_.h  buff_detector_node.h
buff_detector/launch/: buff_detector_video.launch.py
buff_detector/src/: buff_detector.cpp  buff_detector_.cpp  buff_detector_node.cpp
controller_io/: CMakeLists.txt
controller_io/config/: serial_config.yaml
controller_io/include/controller_io/: auto_aim_packet.h  controller_io_node.h
controller_io/launch/: controller_io.launch.py
controller_io/src/: controller_io_node.cpp
custom_serial_driver/include/custom_serial_driver/: serial_driver.h
custom_serial_driver/src/: crc.cpp  serial_driver.cpp
hik_camera/: CMakeLists.txt  package.xml
hik_camera/config/: camera_params.yaml
hik_camera/hik_sdk/lib/aarch64/: MvProducerGEV.cti  libMvUsb3vTL.so.4.1.2.2
hik_camera/include/hik_camera/: hik_camera_node.h  hik_driver.h
hik_camera/src/: hik_camera_node.cpp  hik_driver.cpp
robot_descript/: CMakeLists.txt  package.xml
robot_descript/urdf/: robot_descript.urdf.xacro  sentry_robot_descript.urdf.xacro
src/: Dockerfile  README.md  auto_config  auto_configure  build_container  install_docker_engine  rm_auto_aim.service  rm_auto_aim_2024
src/armor_detector/: CMakeLists.txt  package.xml
src/armor_detector/include/armor_detector/: detector_node.h  inference.h  pnp_solver.h
src/armor_detector/src/: detector_node.cpp  inference.cpp  parser.cpp  pnp_solver.cpp
src/armor_tracker/: CMakeLists.txt  README.md  package.xml
src/armor_tracker/include/armor_tracker/: tracker_node.h
src/armor_tracker/src/: tracker.cpp  tracker_node.cpp
src/auto_aim/: CMakeLists.txt  Dockerfile  auto_config  rm_auto_aim.service
src/auto_aim/config/: CS-004.yaml  infantry_CS004.yaml  infantry_CS016.yaml  node_params.yaml
src/auto_aim/launch/: auto_aim.launch.py  common.py  only_detector.launch.py  rm_auto_aim.launch.py
src/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/auto_aim_interfaces/msg/: Armor.msg  Armors.msg  ControllerAim.msg  DebugAngle.msg  Target.msg
src/buff_detector/: CMakeLists.txt  package.xml
src/buff_detector/include/buff_detector/: buff_detector.h  buff_pnp_solver.h  iou_compute.h
src/buff_detector/launch/: buff_detector.launch.py  buff_detector_video.launch.py
src/buff_detector/src/: buff_detector.cpp
src/controller_io/: CMakeLists.txt  package.xml
src/controller_io/include/controller_io/: auto_aim_packet.h  controller_io_node.h
src/controller_io/src/: controller_io_node.cpp
src/custom_serial_driver/include/custom_serial_driver/: crc.h  serial_driver.h
src/custom_serial_driver/src/: serial_driver.cpp
src/hik_camera/: CMakeLists.txt  README.md  package.xml
src/hik_camera/config/: camera_info.yaml  camera_params.yaml
src/hik_camera/hikSDK/runtime/: configure
src/hik_camera/hik_sdk/lib/aarch64/: MvProducerU3V.cti  libMVGigEVisionSDK.so.4.1.2.2
src/hik_camera/include/hik_camera/: hik_camera_node.h  hik_driver.h
src/hik_camera/launch/: hik_camera.launch.py
src/hik_camera/src/: hik_camera_node.cpp  hik_camera_node__.cpp  hik_driver.cpp
src/pub_video/: CMakeLists.txt  package.xml
src/pub_video/include/pub_video/: pub_video_node.h
src/pub_video/src/: pub_video_node.cpp
src/self_state/: CMakeLists.txt  package.xml
src/self_state/urdf/: self_state.urdf.xacro
